feat(0228-0236): AE 簇 检索与记忆深化 9 票——RAPTOR 层级摘要/句子窗口/自动合并/记忆晋升降级/时间衰减/去重合并/召回权重自适应/参数画像第 15 表/配置对比视图，挂点全部默认关（聚合 247 测试绿）
Co-Authored-By: chyuan <chyuan18894909019@163.com>